--- a/FrmManipulacionDatos/FrmManipulacionDatos.csproj
+++ b/FrmManipulacionDatos/FrmManipulacionDatos.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FrmPrincipal\FrmPrincipal.csproj" />
+  </ItemGroup>
+
 </Project>
